src/objects/Hotel__c.object
<CustomObject>
    <description>Container for hotel</description>
    <fields>
        <fullName>Average_Hotel_Rating__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Average Hotel Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Personal_Rating__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Average Personal Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Hotel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>